# IDS-DeepLearning

./: .gitignore  .pre-commit-config.yaml  BiFlow.ipynb  README.md  azure-pipelines.yml  pyproject.toml  setup.py
.dvc/: config
configs/: config.yaml.backup
data/raw/: biflow_mqtt_bruteforce.csv.dvc  biflow_normal.csv.dvc  biflow_scan_A.csv.dvc  biflow_scan_sU.csv.dvc  biflow_sparta.csv.dvc
models/trained/: dnn_baseline_v1.h5  gru_baseline_v1.h5  gru_baseline_v1_preprocessor.pkl  lstm_baseline_v1.h5
src/: __init__.py  config.py
src/data/: data_loader.py  preprocessor.py
src/training/: tracker.py  train.py
