[tool.poetry]
name = "iot-ids-mlops"
version = "0.1.0"
description = "ML-based Intrusion Detection System for IoT devices with MLOps"
authors = ["Fatemeh M <fatemehm@github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/fatemehm/iot-ids-mlops"
repository = "https://github.com/fatemehm/iot-ids-mlops"
keywords = ["mlops", "intrusion-detection", "iot", "security", "machine-learning"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.13.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
numpy = "^1.24.3"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
mlflow = "^2.8.0"
dvc = {extras = ["azure"], version = "^3.30.0"}
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
click = "^8.1.7"
evidently = "^0.4.10"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
jupyter = "^1.0.0"
ipykernel = "^6.27.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
